# tetris_clone

./: .gitignore  CMakeLists.txt  README.md  draw.backup.txt  main
data/cfg/: default.cfg  user.cfg
include/: colors.h  draw.h  header.h  images.h  movement.h  objects.h  window.h
public/icons/logo/c_logo/: logo_128.c  logo_256.c  logo_32.c  logo_48.c  logo_512.h  logo_64.c  logo_72.c  logo_96.c
src/: colors.c  draw.c  images.c  main.c  movement.c  objects.c  objects2.c  window.c
